docs/pages/versions/v53.0.0/sdk/camera.mdx
---
title: 相机
description: 一个 React 组件，用于渲染设备前置或后置摄像头的预览。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-53/packages/expo-camera'
packageName: 'expo-camera'
iconUrl: '/static/images/packages/expo-camera.png'
platforms: ['android*', 'ios*', 'web', 'expo-go']
---

import { GithubIcon } from '@expo/styleguide-icons/custom/GithubIcon';

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { AndroidPermissions, IOSPermissions } from '~/components/plugins/permissions';
import { BoxLink } from '~/ui/components/BoxLink';
import {
  ConfigReactNative,
  ConfigPluginExample,
  ConfigPluginProperties,
} from '~/ui/components/ConfigSection';
import { SnackInline } from '~/ui/components/Snippet';

`expo-camera` 提供了一个 React 组件，用于渲染设备前置或后置摄像头的预览。摄像头的参数，例如缩放、闪光灯和闪光模式，都可以调整。使用 `CameraView`，你可以拍照和录制视频，并保存到应用的缓存中。该组件还能够检测预览中出现的条形码。在你的设备上运行 [示例](#usage) 来查看这些功能如何协同工作。

## 安装

<APIInstallSection />

## 在 app 配置中进行配置

如果你在项目中使用 config plugins（[Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)），你可以使用 `expo-camera` 内置的 [config plugin](/config-plugins/introduction/) 进行配置。该插件允许你配置一些无法在运行时设置、并且需要重新构建新的应用二进制文件后才会生效的属性。如果你的应用**没有**使用 CNG，那么你需要手动配置该库。

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-camera",
        {
          "cameraPermission": "允许 $(PRODUCT_NAME) 访问你的摄像头",
          "microphonePermission": "允许 $(PRODUCT_NAME) 访问你的麦克风",
          "recordAudioAndroid": true
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'cameraPermission',
      platform: 'ios',
      description: '用于设置 [`NSCameraUsageDescription`](#ios) 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的摄像头"',
    },
    {
      name: 'microphonePermission',
      platform: 'ios',
      description: '用于设置 [`NSMicrophoneUsageDescription`](#ios) 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的麦克风"',
    },
    {
      name: 'recordAudioAndroid',
      platform: 'android',
      description:
        '一个布尔值，用于决定是否在 Android 上启用 `RECORD_AUDIO` 权限。',
      default: 'true',
    },
  ]}
/>

<ConfigReactNative>

如果你没有使用 Continuous Native Generation（[CNG](/workflow/continuous-native-generation/)）（也就是你在手动使用原生 **android** 和 **ios** 项目），那么你需要在原生项目中配置以下权限：

**Android**

- `expo-camera` 会自动将 `android.permission.CAMERA` 权限添加到你项目的 **android/app/src/main/AndroidManifest.xml** 中。如果你想录制带音频的视频，请包含 `RECORD_AUDIO` 权限：

  ```xml
  <!-- 已添加的权限 -->
  <uses-permission android:name="android.permission.CAMERA" />

  <!-- 仅在录制带音频的视频时添加 -->
  <uses-permission android:name="android.permission.RECORD_AUDIO" />
  ```

- 然后，调整 **android/build.gradle** 文件，在所有其他仓库后添加一个新的 maven 块，如下所示：

  ```groovy
  allprojects {
    repositories {
        // * 你的其他仓库放在这里 *
        // * 在其他仓库 / 块之后添加一个新的 maven 块 *
        maven {
            // expo-camera 捆绑了一个自定义的 com.google.android:cameraview
            url "$rootDir/../node_modules/expo-camera/android/maven"
        }
    }
  }
  ```

**iOS**

- 将 `NSCameraUsageDescription` 和 `NSMicrophoneUsageDescription` 键添加到你项目的 **ios/[app]/Info.plist** 中：

  ```xml
  <key>NSCameraUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 访问你的摄像头</string>
  <key>NSMicrophoneUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 访问你的麦克风</string>
  ```

</ConfigReactNative>

## 使用

> **warning** 在任意给定时间内，只能有一个 Camera 预览处于活动状态。如果你的应用有多个屏幕，当某个屏幕失去焦点时，你应该卸载 `Camera` 组件。

<SnackInline label='基础摄像头用法' dependencies={['expo-camera']}>

```tsx
import { CameraView, CameraType, useCameraPermissions } from 'expo-camera';
import { useState } from 'react';
import { Button, StyleSheet, Text, TouchableOpacity, View } from 'react-native';

export default function App() {
  const [facing, setFacing] = useState<CameraType>('back');
  const [permission, requestPermission] = useCameraPermissions();

  if (!permission) {
    // 摄像头权限仍在加载中。
    return <View />;
  }

  if (!permission.granted) {
    // 摄像头权限尚未授予。
    return (
      <View style={styles.container}>
        <Text style={styles.message}>我们需要你的许可来显示摄像头</Text>
        <Button onPress={requestPermission} title="授予权限" />
      </View>
    );
  }

  function toggleCameraFacing() {
    setFacing(current => (current === 'back' ? 'front' : 'back'));
  }

  return (
    <View style={styles.container}>
      <CameraView style={styles.camera} facing={facing} />
      <View style={styles.buttonContainer}>
        <TouchableOpacity style={styles.button} onPress={toggleCameraFacing}>
          <Text style={styles.text}>翻转摄像头</Text>
        </TouchableOpacity>
      </View>
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    justifyContent: 'center',
  },
  message: {
    textAlign: 'center',
    paddingBottom: 10,
  },
  camera: {
    flex: 1,
  },
  buttonContainer: {
    position: 'absolute',
    bottom: 64,
    flexDirection: 'row',
    backgroundColor: 'transparent',
    width: '100%',
    paddingHorizontal: 64,
  },
  button: {
    flex: 1,
    alignItems: 'center',
  },
  text: {
    fontSize: 24,
    fontWeight: 'bold',
    color: 'white',
  },
});
```

</SnackInline>

### 高级用法

<BoxLink
  title="摄像头应用示例"
  description="一个完整示例，展示如何拍照并将其显示出来。使用 TypeScript 编写。"
  Icon={GithubIcon}
  href="https://github.com/expo/examples/tree/master/with-camera"
/>

## Web 支持

大多数浏览器都支持某种版本的网页摄像头功能，你可以在 [这里查看网页摄像头的浏览器支持情况](https://caniuse.com/#feat=stream)。图像 URI 总是以 base64 字符串返回，因为浏览器中不可用本地文件系统路径。

### Chrome `iframe` 用法

当使用 **Chrome 64 及以上版本** 时，如果你尝试在跨域 iframe 中使用网页摄像头，将不会渲染任何内容。要为你的 iframe 添加摄像头支持，只需向 iframe 元素添加属性 `allow="microphone; camera;"`：

```html
<iframe src="..." allow="microphone; camera;">
  <!-- <CameraView /> -->
</iframe>
```

## API

```js
import { CameraView } from 'expo-camera';
```

<APISection packageName="expo-camera" apiName="Camera" exposeAllClassPropsInSidebar />

## 权限

### Android

此包会自动向你的应用添加 `CAMERA` 权限。如果你想录制带音频的视频，你必须在 **app.json** 的 [`expo.android.permissions`](../config/app/#permissions) 数组中包含 `RECORD_AUDIO`。

<AndroidPermissions permissions={['CAMERA', 'RECORD_AUDIO']} />

### iOS

此库使用以下用途说明键：

<IOSPermissions permissions={['NSCameraUsageDescription', 'NSMicrophoneUsageDescription']} />
